--- a/frontend/kabina-dxc-project/src/app/kabina/components/user-list/user-list.component.html
+++ b/frontend/kabina-dxc-project/src/app/kabina/components/user-list/user-list.component.html
@@ -1,5 +1,3 @@
-<link rel="stylesheet" type="text/css" href="//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css">
-<hr>
 <div class="container bootstrap snippet">
     <div class="row">
         <div class="col-lg-12">
@@ -10,113 +8,25 @@
                             <thead>
                                 <tr>
                                 <th><span>User</span></th>
-                                <th><span>Created</span></th>
+                                <th><span>Admin</span></th>
                                 <th class="text-center"><span>Status</span></th>
-                                <th><span>Email</span></th>
+                                <th><span>Url</span></th>
                                 <th>&nbsp;</th>
                                 </tr>
                             </thead>
-                            <tbody>
-                                <tr>
+                            <tbody *ngIf="users">
+                                <tr *ngFor="let user of users">
                                     <td>
-                                        <img src="https://bootdey.com/img/Content/user_1.jpg" alt="">
-                                        <a href="#" class="user-link">Full name 1</a>
-                                        <span class="user-subhead">Member</span>
+                                        <img src="{{user.avatar_url}}" alt="">
+                                        <a href="#" class="user-link">{{user.login}}</a>
+                                        <span class="user-subhead">ID: {{user.id}}</span>
                                     </td>
-                                    <td>2019/08/12</td>
+                                    <td>{{user.site_admin}}</td>
                                     <td class="text-center">
                                         <span class="label label-default">pending</span>
                                     </td>
                                     <td>
-                                        <a href="#">marlon@brando.com</a>
-                                    </td>
-                                    <td style="width: 20%;">
-                                        <a href="#" class="table-link">
-                                            <span class="fa-stack">
-                                                <i class="fa fa-square fa-stack-2x"></i>
-                                                <i class="fa fa-search-plus fa-stack-1x fa-inverse"></i>
-                                            </span>
-                                        </a>
-                                        <a href="#" class="table-link">
-                                            <span class="fa-stack">
-                                                <i class="fa fa-square fa-stack-2x"></i>
-                                                <i class="fa fa-pencil fa-stack-1x fa-inverse"></i>
-                                            </span>
-                                        </a>
-                                        <a href="#" class="table-link danger">
-                                            <span class="fa-stack">
-                                                <i class="fa fa-square fa-stack-2x"></i>
-                                                <i class="fa fa-trash-o fa-stack-1x fa-inverse"></i>
-                                            </span>
-                                        </a>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>
-                                        <img src="https://bootdey.com/img/Content/user_3.jpg" alt="">
-                                        <a href="#" class="user-link">Full name 2</a>
-                                        <span class="user-subhead">Admin</span>
-                                    </td>
-                                    <td>2019/08/12</td>
-                                    <td class="text-center">
-                                        <span class="label label-success">Active</span>
-                                    </td>
-                                    <td>
-                                        <a href="#">marlon@brando.com</a>
-                                    </td>
-                                    <td style="width: 20%;">
-                                        <a href="#" class="table-link">
-                                            <span class="fa-stack">
-                                                <i class="fa fa-square fa-stack-2x"></i>
-                                                <i class="fa fa-search-plus fa-stack-1x fa-inverse"></i>
-                                            </span>
-                                        </a>
-                                        <a href="#" class="table-link">
-                                            <span class="fa-stack">
-                                                <i class="fa fa-square fa-stack-2x"></i>
-                                                <i class="fa fa-pencil fa-stack-1x fa-inverse"></i>
-                                            </span>
-                                        </a>
-                                        <a href="#" class="table-link danger">
-                                            <span class="fa-stack">
-                                                <i class="fa fa-square fa-stack-2x"></i>
-                                                <i class="fa fa-trash-o fa-stack-1x fa-inverse"></i>
-                                            </span>
-                                        </a>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>
-                                        <img src="https://bootdey.com/img/Content/user_2.jpg" alt="">
-                                        <a href="#" class="user-link">Full name 3</a>
-                                        <span class="user-subhead">Member</span>
-                                    </td>
-                                    <td>2019/08/12</td>
-                                    <td class="text-center">
-                                        <span class="label label-danger">inactive</span>
-                                    </td>
-                                    <td>
-                                        <a href="#">marlon@brando.com</a>
-                                    </td>
-                                    <td style="width: 20%;">
-                                        <a href="#" class="table-link">
-                                            <span class="fa-stack">
-                                                <i class="fa fa-square fa-stack-2x"></i>
-                                                <i class="fa fa-search-plus fa-stack-1x fa-inverse"></i>
-                                            </span>
-                                        </a>
-                                        <a href="#" class="table-link">
-                                            <span class="fa-stack">
-                                                <i class="fa fa-square fa-stack-2x"></i>
-                                                <i class="fa fa-pencil fa-stack-1x fa-inverse"></i>
-                                            </span>
-                                        </a>
-                                        <a href="#" class="table-link danger">
-                                            <span class="fa-stack">
-                                                <i class="fa fa-square fa-stack-2x"></i>
-                                                <i class="fa fa-trash-o fa-stack-1x fa-inverse"></i>
-                                            </span>
-                                        </a>
+                                        <a href="{{user.html_url}}">{{user.html_url}}</a>
                                     </td>
                                 </tr>
                             </tbody>
