--- a/frontend/kabina-dxc-project/src/app/kabina/components/user-list/user-list.component.html
+++ b/frontend/kabina-dxc-project/src/app/kabina/components/user-list/user-list.component.html
@@ -1,45 +1,1 @@
-<div class="container bootstrap snippet">
-    <div class="row">
-        <div class="col-lg-12">
-            <div class="main-box no-header clearfix">
-                <div class="main-box-body clearfix">
-                    <div class="table-responsive">
-                        <table class="table user-list">
-                            <thead>
-                                <tr>
-                                <th><span>User</span></th>
-                                <th><span>Admin</span></th>
-                                <th class="text-center"><span>Status</span></th>
-                                <th><span>Url</span></th>
-                                <th>&nbsp;</th>
-                                </tr>
-                            </thead>
-                            <tbody *ngIf="users">
-                                <tr *ngFor="let user of users | paginate: config">
-                                    <td>
-                                        <img src="{{user.avatar_url}}" alt="">
-                                        <a href="#" class="user-link">{{user.login}}</a>
-                                        <span class="user-subhead">ID: {{user.id}}</span>
-                                    </td>
-                                    <td>{{user.site_admin}}</td>
-                                    <td class="text-center">
-                                        <span class="label label-default">pending</span>
-                                    </td>
-                                    <td>
-                                        <a href="{{user.html_url}}">{{user.html_url}}</a>
-                                    </td>
-                                </tr>
-                            </tbody>
-                        </table>
-                        <pagination-controls [maxSize]="maxSize"
-                        [directionLinks]="directionLinks"
-                        [autoHide]="autoHide"
-                        [responsive]="responsive"
-                        (pageChange)="pageChanged($event)"></pagination-controls>
-
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
+<table datatable [dtOptions]="dtOptions" class="row-border hover"></table>
