--- a/frontend/kabina-dxc-project/src/app/kabina/components/user-list/user-list.component.html
+++ b/frontend/kabina-dxc-project/src/app/kabina/components/user-list/user-list.component.html
@@ -1,1 +1,16 @@
-<table datatable [dtOptions]="dtOptions" class="row-border hover"></table>
+<table datatable [dtOptions]="dtOptions" class="row-border hover">
+    <thead>
+        <tr>
+          <th>ID</th>
+          <th>USERNAME</th>
+          <th>URL</th>
+        </tr>
+      </thead>
+      <tbody *ngIf="users">
+        <tr *ngFor="let user of users">
+          <td>{{ user.id }}</td>
+          <td>{{ user.login }}</td>
+          <td>{{ user.url }}</td>
+        </tr>
+      </tbody>
+</table>
