--- a/frontend/kabina-dxc-project/src/app/kabina/components/user-list/user-list.component.html
+++ b/frontend/kabina-dxc-project/src/app/kabina/components/user-list/user-list.component.html
@@ -1,16 +1,30 @@
-<table datatable [dtOptions]="dtOptions" class="row-border hover">
-    <thead>
-        <tr>
-          <th>ID</th>
-          <th>USERNAME</th>
-          <th>URL</th>
-        </tr>
-      </thead>
-      <tbody *ngIf="users">
-        <tr *ngFor="let user of users">
-          <td>{{ user.id }}</td>
-          <td>{{ user.login }}</td>
-          <td>{{ user.url }}</td>
-        </tr>
-      </tbody>
-</table>
+
+<div class="container bootstrap snippet">
+    <div class="row">
+        <div class="col-lg-12">
+            <div class="main-box no-header clearfix">
+                <div class="main-box-body clearfix">
+                    <div class="table-responsive">
+                        <table *ngIf="users" datatable [dtOptions]="dtOptions" class="row-border hover">
+                            <thead>
+                                <tr>
+                                  <th>ID</th>
+                                  <th>USERNAME</th>
+                                  <th>URL</th>
+                                </tr>
+                              </thead>
+                              <tbody >
+                                <tr *ngFor="let user of users">
+                                  <td>{{ user.id }}</td>
+                                  <td>{{ user.login }}</td>
+                                  <td>{{ user.url }}</td>
+                                </tr>
+                              </tbody>
+                        </table>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
